# structure-kit

./: LICENSE  Makefile  bench.bash  build.bash  cabal.project  format.bash  profile-heap.bash  profile.bash  stack.yaml  structure-kit.cabal  test.bash
bench/: Main.hs
bench/Main/ExtrasFor/: LruHashCache.hs  QcGen.hs
profile/: Main.hs  gc-report  time-allocation-report.prof
profile-lhc/: Main.hs
profile-loc/: Main.hs
quickcheck-util/StructureKit/QuickCheckUtil/ExtrasFor/: Gen.hs
reports/: lhc.gc  lhc.prof  loc.gc  loc.prof
test/: Main.hs
test/StructureKit/TestSuites/: Charset.hs  TextArray.hs
