name: structure-kit
version: 0.1
synopsis: Immutable data structures for all kinds of purposes
homepage: https://github.com/nikita-volkov/structure-kit
bug-reports: https://github.com/nikita-volkov/structure-kit/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2021 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/structure-kit.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedSums, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  ghc-options:
    -funbox-strict-fields
  exposed-modules:
    StructureKit.Bits64
    StructureKit.Bits256
    StructureKit.By12Bits
    StructureKit.By18Bits
    StructureKit.By24Bits
    StructureKit.By30Bits
    StructureKit.By32Bits
    StructureKit.By6Bits
    StructureKit.By8Bits
    StructureKit.ByteArrayCache
    StructureKit.ByteArrayMap
    StructureKit.ByteStringArray
    StructureKit.Hamt
    StructureKit.IntCountMap
    StructureKit.KeyRegistry
    StructureKit.LookupOrderedHashMap
    StructureKit.LrlHashCache
    StructureKit.LruHashCache
    StructureKit.Speedometer
    StructureKit.TouchOrderedHashMap
  other-modules:
    StructureKit.By32Bits.KeyOps
    StructureKit.ByteArrayCacheEntry
    StructureKit.LookupOrderedHashMapEntry
    StructureKit.Prelude
    StructureKit.TrieBitMasks
    StructureKit.Util.SmallArray
  build-depends:
    base >=4.11 && <5,
    bytestring >=0.10 && <0.12,
    comonad >=5 && <6,
    containers >=0.6 && <0.7,
    deferred-folds >=0.9.16 && <0.10,
    deque >=0.4.3 && <0.5,
    hashable >=1 && <2,
    primitive >=0.7.1 && <0.8,
    text >=1 && <2,
    transformers >=0.5 && <0.6,
    vector >=0.12 && <0.13

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions: BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, StrictData, TemplateHaskell, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedSums, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    QuickCheck >=2.8.1 && <3,
    quickcheck-instances >=0.3.11 && <0.4,
    rerebase <2,
    structure-kit,
    tasty >=0.12 && <2,
    tasty-hunit >=0.9 && <0.11,
    tasty-quickcheck >=0.9 && <0.11
