cabal-version: 3.0
name: structure-kit
version: 0.1
synopsis: Rich collection of persistent data-structures
homepage: https://github.com/nikita-volkov/structure-kit
bug-reports: https://github.com/nikita-volkov/structure-kit/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2021 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple

source-repository head
  type: git
  location: git://github.com/nikita-volkov/structure-kit.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedSums, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  exposed-modules:
    StructureKit.Bits256
    StructureKit.Bits64
    StructureKit.By32Bits
    StructureKit.By6Bits
    StructureKit.By8Bits
    StructureKit.ByteArrayCache
    StructureKit.ByteArrayMap
    StructureKit.ByteStringArray
    StructureKit.Charset
    StructureKit.Hamt
    StructureKit.IdGen
    StructureKit.IdRegistry
    StructureKit.IntCountMap
    StructureKit.LookupOrderedHashMap
    StructureKit.LrlHashCache
    StructureKit.LruHashCache
    StructureKit.LruOrdCache
    StructureKit.NullableBVec
    StructureKit.SparseVector
    StructureKit.Speedometer
    StructureKit.TouchTrackingHashMap
    StructureKit.TouchTrackingOrdMap
  other-modules:
    StructureKit.By32Bits.KeyOps
    StructureKit.ByteArrayCacheEntry
    StructureKit.LookupOrderedHashMapEntry
    StructureKit.Prelude
    StructureKit.TrieBitMasks
    StructureKit.Util.SmallArray
  build-depends:
    base >=4.11 && <5,
    bytestring >=0.10 && <0.12,
    comonad >=5 && <6,
    containers >=0.6 && <0.7,
    deepseq >=1.4.3 && <1.5,
    deferred-folds >=0.9.16 && <0.10,
    deque >=0.4.4 && <0.5,
    groups >=0.5 && <0.6,
    hashable >=1 && <2,
    primitive >=0.7.1 && <0.8,
    range-set-list >=0.1.3.1 && <0.2,
    text >=1 && <2,
    tostring >=0.2.1.1 && <0.3,
    transformers >=0.5 && <0.6,
    unordered-containers >=0.2.14 && <0.3,
    vector >=0.12 && <0.13,

library structure-kit-quickcheck-util
  hs-source-dirs: quickcheck-util
  default-extensions: BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedSums, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  exposed-modules:
    StructureKit.QuickCheckUtil.ExtrasFor.Gen
  build-depends:
    QuickCheck >=2.14.2 && <3,
    rerebase >=1.13.0.1 && <2,

test-suite test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  default-extensions: BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedSums, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  main-is: Main.hs
  build-depends:
    QuickCheck >=2.14.2 && <3,
    quickcheck-instances >=0.3.11 && <0.4,
    rerebase <2,
    structure-kit,
    structure-kit-quickcheck-util,
    tasty >=0.12 && <2,
    tasty-hunit >=0.9 && <0.11,
    tasty-quickcheck >=0.9 && <0.11,

benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  ghc-options: -O2 -threaded "-with-rtsopts=-N"
  default-extensions: BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedSums, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  build-depends:
    gauge >=0.2.5 && <0.3,
    structure-kit,
    structure-kit-quickcheck-util,
    rerebase >=1.13.0.1 && <2,
    QuickCheck >=2.14.2 && <3,

test-suite profile-lhc
  type: exitcode-stdio-1.0
  hs-source-dirs: profile-lhc
  main-is: Main.hs
  default-extensions: BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedSums, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  build-depends:
    structure-kit,
    structure-kit-quickcheck-util,
    rerebase >=1.13.0.1 && <2,
    QuickCheck >=2.14.2 && <3,

test-suite profile-loc
  type: exitcode-stdio-1.0
  hs-source-dirs: profile-loc
  main-is: Main.hs
  default-extensions: BangPatterns, BinaryLiterals, BlockArguments, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TupleSections, TypeApplications, TypeFamilies, TypeOperators, UnboxedSums, UnboxedTuples, ViewPatterns
  default-language: Haskell2010
  build-depends:
    structure-kit,
    structure-kit-quickcheck-util,
    rerebase >=1.13.0.1 && <2,
    QuickCheck >=2.14.2 && <3,
