cabal-version: 3.0
name:          structure-kit
version:       0.1.0.1
synopsis:      Rich collection of persistent pure data-structures
homepage:      https://github.com/nikita-volkov/structure-kit
bug-reports:   https://github.com/nikita-volkov/structure-kit/issues
author:        Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:    Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:     (c) 2021 Nikita Volkov
license:       MIT
license-file:  LICENSE

source-repository head
  type:     git
  location: git://github.com/nikita-volkov/structure-kit.git

common base-settings
  default-language:   Haskell2010
  default-extensions:
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PatternGuards
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedSums
    UnboxedTuples
    ViewPatterns

common executable-settings
  import:      base-settings
  ghc-options: -O2 -threaded "-with-rtsopts=-N -I0 -qg"

library
  import:          base-settings
  hs-source-dirs:  library
  exposed-modules:
    StructureKit.BalancedList
    StructureKit.Bits256
    StructureKit.Bits64
    StructureKit.By32Bits
    StructureKit.By6Bits
    StructureKit.By8Bits
    StructureKit.ByteArrayCache
    StructureKit.ByteArrayMap
    StructureKit.ByteStringArray
    StructureKit.Charset
    StructureKit.Hamt
    StructureKit.IdGen
    StructureKit.IdRegistry
    StructureKit.IntCountMap
    StructureKit.LookupOrderedHashMap
    StructureKit.LrlHashCache
    StructureKit.LruHashCache
    StructureKit.LruOrdCache
    StructureKit.NullableBVec
    StructureKit.Range
    StructureKit.SegmentMap
    StructureKit.SparseVector
    StructureKit.Speedometer
    StructureKit.TextArray
    StructureKit.TouchTrackingHashMap
    StructureKit.TouchTrackingOrdMap
    StructureKit.Version

  other-modules:
    StructureKit.By32Bits.KeyOps
    StructureKit.ByteArrayCacheEntry
    StructureKit.LookupOrderedHashMapEntry
    StructureKit.Prelude
    StructureKit.TrieBitMasks
    StructureKit.Util.SmallArray

  build-depends:
    , base >=4.11 && <5
    , bytestring >=0.10 && <0.12
    , comonad >=5 && <6
    , containers ^>=0.6
    , deepseq ^>=1.4.3
    , deferred-folds ^>=0.9.16
    , deque ^>=0.4.4
    , groups ^>=0.5
    , hashable >=1 && <2
    , primitive >=0.7.1 && <0.9
    , range-set-list ^>=0.1.3.1
    , strict-list ^>=0.1.7
    , text >=2 && <3
    , text-builder ^>=0.6.7
    , transformers >=0.5 && <0.7
    , unordered-containers ^>=0.2.14
    , vector >=0.12 && <0.14
    , vector-extras ^>=0.2.7.1
    , witherable ^>=0.4.2

library structure-kit-quickcheck-util
  import:          base-settings
  hs-source-dirs:  quickcheck-util
  exposed-modules: StructureKit.QuickCheckUtil.ExtrasFor.Gen
  build-depends:
    , QuickCheck >=2.14.2 && <3
    , rerebase >=1.15.0.3 && <2

test-suite test
  import:         base-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    StructureKit.TestSuites.Charset
    StructureKit.TestSuites.TextArray

  build-depends:
    , extra ^>=1.7.12
    , QuickCheck >=2.14.2 && <3
    , quickcheck-instances ^>=0.3.11
    , rerebase <2
    , structure-kit
    , structure-kit-quickcheck-util
    , tasty >=0.12 && <2
    , tasty-hunit >=0.9 && <0.11
    , tasty-quickcheck >=0.9 && <0.11
    , tostring ^>=0.2.1.1

benchmark bench
  import:         executable-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , gauge ^>=0.2.5
    , QuickCheck >=2.14.2 && <3
    , rerebase >=1.15.0.3 && <2
    , structure-kit
    , structure-kit-quickcheck-util

test-suite profile-lhc
  import:         base-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: profile-lhc
  main-is:        Main.hs
  build-depends:
    , QuickCheck >=2.14.2 && <3
    , rerebase >=1.15.0.3 && <2
    , structure-kit
    , structure-kit-quickcheck-util

test-suite profile-loc
  import:         base-settings
  type:           exitcode-stdio-1.0
  hs-source-dirs: profile-loc
  main-is:        Main.hs
  build-depends:
    , QuickCheck >=2.14.2 && <3
    , rerebase >=1.15.0.3 && <2
    , structure-kit
    , structure-kit-quickcheck-util
